[tool.poetry]
name = "tg_game_engine"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.17"
psycopg2-binary = "^2.8.6"
alembic = "^1.6.5"
gunicorn = "^20.1.0"
requests = "^2.25.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
